--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '10.0'
 
-target 'Marimo' do
+target 'searchpicture_front' do
   config = use_native_modules!
 
   use_react_native!(
@@ -21,7 +21,7 @@ target 'Marimo' do
 
   pod 'RNSound', :path => '../node_modules/react-native-sound'
 
-  target 'MarimoTests' do
+  target 'searchpicture_frontTests' do
     inherit! :complete
     # Pods for testing
   end
