--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Marimo",
+  "name": "searchpicture_front",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -33,6 +33,7 @@
     "react-native-circular-progress": "^1.3.7",
     "react-native-game-engine": "^1.2.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.1.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^13.0.0",
     "react-native-naver-font": "^1.0.0",
