--- a/ios/searchpicture_front/Info.plist
+++ b/ios/searchpicture_front/Info.plist
@@ -24,7 +24,7 @@
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string></string>
+			<string>search-pictest</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
@@ -52,8 +52,6 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>마리모 앱을 사용하기 위해서는 음성 인식 권한이 필요합니다.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>카메라 사용 권한이 필요합니다.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
@@ -62,8 +60,8 @@
 	<string>마이크 사용 권한이 필요합니다.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>갤러리 사용 권한이 필요합니다.</string>
-	<key>UIAppFonts</key>
-	
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>마리모 앱을 사용하기 위해서는 음성 인식 권한이 필요합니다.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
