--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-async-storage/async-storage": "^1.15.8",
     "@react-native-community/cameraroll": "^4.0.4",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/progress-bar-android": "^1.0.4",
+    "@react-native-community/progress-view": "^1.3.1",
     "@react-native-seoul/naver-login": "^2.1.1",
     "@react-navigation/bottom-tabs": "^6.0.2",
     "@react-navigation/native": "^6.0.2",
@@ -27,6 +29,7 @@
     "react-native": "0.64.2",
     "react-native-camera": "^4.2.1",
     "react-native-circular-progress": "^1.3.7",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.1.1",
     "react-native-modal": "^13.0.0",
     "react-native-naver-font": "^1.0.0",
@@ -36,8 +39,9 @@
     "react-native-reanimated": "^2.2.2",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^3.3.0",
-    "react-native-screens": "^3.5.0",
+    "react-native-safe-area": "^0.5.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.9.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-sound": "^0.11.1",
     "react-native-sound-player": "^0.11.1",
