--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-circular-progress": "^1.3.7",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-grid-image-viewer": "^1.2.2",
     "react-native-image-picker": "^4.1.1",
     "react-native-modal": "^13.0.0",
     "react-native-naver-font": "^1.0.0",
@@ -49,6 +50,7 @@
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^12.1.1",
     "react-native-svg-charts": "^5.4.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
