--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@jiggag/react-native-kakao-maps": "^0.0.5",
     "@react-native-async-storage/async-storage": "^1.15.8",
     "@react-native-community/cameraroll": "^4.0.4",
     "@react-native-community/masked-view": "^0.1.11",
@@ -26,14 +27,15 @@
     "matter-js": "^0.17.1",
     "npm": "^7.24.0",
     "react": "17.0.1",
-    "react-native": "0.64.2",
+    "react-native": "^0.66.3",
     "react-native-camera": "^4.2.1",
     "react-native-circular-progress": "^1.3.7",
     "react-native-dropdown-picker": "^5.2.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-grid-image-viewer": "^1.2.2",
     "react-native-image-picker": "^4.1.1",
-    "react-native-modal": "^13.0.0",
+    "react-native-maps": "^0.29.4",
+    "react-native-modal": "^12.1.0",
     "react-native-naver-font": "^1.0.0",
     "react-native-orientation": "^3.1.3",
     "react-native-paper": "^4.9.2",
@@ -49,7 +51,7 @@
     "react-native-sound-player": "^0.11.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "^9.12.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^8.1.0",
