--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.64.2",
     "react-native-camera": "^4.2.1",
     "react-native-circular-progress": "^1.3.7",
+    "react-native-config": "^1.4.5",
     "react-native-dropdown-picker": "^5.2.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-grid-image-viewer": "^1.2.2",
