--- a/ios/searchpicture_front/Info.plist
+++ b/ios/searchpicture_front/Info.plist
@@ -55,7 +55,11 @@
 	<key>NSCameraUsageDescription</key>
 	<string>카메라 사용 권한이 필요합니다.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string>앱을 사용하는 동안 사용자의 위치 공유</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>항상 사용자의 위치 공유</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>항상 사용자의 위치 공유</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>마이크 사용 권한이 필요합니다.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
@@ -77,6 +81,23 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>UIAppFonts</key>
-	<array/>
+	<array>
+		<string>AntDesign.ttf</string>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>Feather.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>FontAwesome5_Brands.ttf</string>
+		<string>FontAwesome5_Regular.ttf</string>
+		<string>FontAwesome5_Solid.ttf</string>
+		<string>Fontisto.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Zocial.ttf</string>
+	</array>
 </dict>
 </plist>
