--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.4",
     "@react-navigation/stack": "^6.0.4",
-    "axios": "^0.21.4",
+    "axios": "^0.24.0",
     "fbjs": "^3.0.0",
     "install": "^0.13.0",
     "matter-js": "^0.17.1",
@@ -29,10 +29,13 @@
     "react-native": "0.64.2",
     "react-native-camera": "^4.2.1",
     "react-native-circular-progress": "^1.3.7",
+    "react-native-config": "^1.4.5",
     "react-native-dropdown-picker": "^5.2.3",
+    "react-native-geolocation-service": "^5.3.0-beta.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-grid-image-viewer": "^1.2.2",
     "react-native-image-picker": "^4.1.1",
+    "react-native-maps": "^0.29.4",
     "react-native-modal": "^13.0.0",
     "react-native-naver-font": "^1.0.0",
     "react-native-orientation": "^3.1.3",
@@ -52,7 +55,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-swipe-gestures": "^1.0.5",
-    "react-native-vector-icons": "^8.1.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "rn-toggle-switch": "^1.0.2",
@@ -62,6 +65,7 @@
     "@babel/core": "^7.15.0",
     "@babel/runtime": "^7.14.8",
     "@react-native-community/eslint-config": "^3.0.0",
+    "@types/react-native-vector-icons": "^6.4.10",
     "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
     "jest": "^27.0.6",
