--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
       android:theme="@style/AppTheme"
       android:usesCleartextTraffic="true"
       >
+      <meta-data 
+        android:name="com.google.android.geo.API_KEY" 
+        android:value="AIzaSyAMPJIn_cP0fm8BK8Vzezbt0x5mdiMlXQw"/> 
+        <!-- You will also only need to add this uses-libray tag --> 
+      <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+
       <activity
         android:name=".SplashActivity"
         android:theme="@style/SplashTheme"
@@ -44,4 +50,5 @@
       </activity>
       
     </application>
+    
 </manifest>
