--- a/ios/searchpicture_front/Info.plist
+++ b/ios/searchpicture_front/Info.plist
@@ -55,7 +55,11 @@
 	<key>NSCameraUsageDescription</key>
 	<string>카메라 사용 권한이 필요합니다.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string>앱을 사용하는 동안 사용자의 위치 공유</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>항상 사용자의 위치 공유</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>항상 사용자의 위치 공유</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>마이크 사용 권한이 필요합니다.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
