--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,34 +1,33 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '10.0'
+platform :ios, '13.0'
 
 target 'searchpicture_front' do
-  config = use_native_modules!
 
-  use_react_native!(
+    rn_maps_path = '../node_modules/react-native-maps'
+    pod 'react-native-google-maps', :path => rn_maps_path
+    pod 'GoogleMaps'
+    pod 'Google-Maps-iOS-Utils'
+
+    config = use_native_modules!
+
+    use_react_native!(
     :path => config[:reactNativePath],
     :hermes_enabled => false
-  )
-  
+    )
 
-
-
-
-
-  pod 'react-native-config', :path => '../node_modules/react-native-config'
-
-  target 'searchpicture_frontTests' do
+    target 'searchpicture_frontTests' do
     inherit! :complete
-  end
-  
-  use_flipper!({ 'Flipper-Folly' => '2.5.0' }) # update this part
-     post_install do |installer|
-     installer.pods_project.targets.each do |target|
-     target.build_configurations.each do |config|
-       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '10.0'
-     end
-   end
-   flipper_post_install(installer)
-  end
+    end
+
+    use_flipper!
+    post_install do |installer|
+        installer.pods_project.targets.each do |target|
+            target.build_configurations.each do |config|
+                config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+            end
+        end
+        flipper_post_install(installer)
+    end
 end
