--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.8",
-    "@react-native-community/cameraroll": "^4.0.4",
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/progress-bar-android": "^1.0.4",
     "@react-native-community/progress-view": "^1.3.1",
@@ -27,7 +27,7 @@
     "npm": "^7.24.0",
     "react": "17.0.1",
     "react-native": "0.64.2",
-    "react-native-camera": "^4.2.1",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-circular-progress": "^1.3.7",
     "react-native-config": "^1.4.5",
     "react-native-dropdown-picker": "^5.2.3",
