--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "react-native-svg": "^12.1.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-tags": "^2.2.1",
+    "react-native-tags-input": "^1.0.10",
     "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
