--- a/ios/searchpicture_front/Info.plist
+++ b/ios/searchpicture_front/Info.plist
@@ -64,6 +64,8 @@
 	<string>마이크 사용 권한이 필요합니다.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>갤러리 사용 권한이 필요합니다.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>갤러리 사용 권한이 필요합니다.</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>마리모 앱을 사용하기 위해서는 음성 인식 권한이 필요합니다.</string>
 	<key>UILaunchStoryboardName</key>
