--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,6 +19,9 @@ target 'searchpicture_front' do
 
     pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
 
+    pod 'react-native-geolocation', :path => '../node_modules/@react-native-community/geolocation'
+
+
     target 'searchpicture_frontTests' do
     inherit! :complete
     end
