--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@notech/react-native-exif": "^0.6.2",
     "@react-native-async-storage/async-storage": "^1.15.8",
     "@react-native-community/cameraroll": "^4.1.2",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/progress-bar-android": "^1.0.4",
     "@react-native-community/progress-view": "^1.3.1",
@@ -31,6 +33,7 @@
     "react-native-circular-progress": "^1.3.7",
     "react-native-config": "^1.4.5",
     "react-native-dropdown-picker": "^5.2.3",
+    "react-native-exif": "^0.5.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-grid-image-viewer": "^1.2.2",
     "react-native-image-picker": "^4.1.1",
