--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "npm": "^7.24.0",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-autocomplete-dropdown": "^1.1.6",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-circular-progress": "^1.3.7",
     "react-native-config": "^1.4.5",
