fix: 네이버 로그인 관련 IOS 설정 추가

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,6 +22,8 @@ target 'searchpicture_front' do
     pod 'react-native-geolocation', :path => '../node_modules/@react-native-community/geolocation'
 
 
+    pod 'RNNaverLogin', :path => '../node_modules/@react-native-seoul/naver-login'
+
     target 'searchpicture_frontTests' do
     inherit! :complete
     end
