--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-maps": "^0.29.4",
     "react-native-modal": "^13.0.0",
     "react-native-naver-font": "^1.0.0",
+    "react-native-naver-login": "^1.4.0",
     "react-native-orientation": "^3.1.3",
     "react-native-paper": "^4.9.2",
     "react-native-really-awesome-button": "^1.6.0",
